--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@emotion/core": "^10.0.17",
     "@emotion/styled": "^10.0.17",
+    "emotion-theming": "^10.0.18",
     "gatsby": "^2.15.14",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
+    "normalize.css": "^8.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
